Prevents the grid selection from causing movement in the screen and prevents overflow of the Organizer name

--- a/public/css/meetings.css
+++ b/public/css/meetings.css
@@ -682,6 +682,8 @@ textarea {
     text-align: right;
     font-size: 14px;
     display: block;
+    padding-right: 65px;
+    padding-left: 5px;
 }
 
 #org-span4 {
@@ -708,6 +710,12 @@ textarea {
     text-overflow: ellipsis;	
 }
 
+#org-p1 {
+	overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 #org-p2 {
 	font-style: italic;
 	font-size: 12px;
@@ -722,6 +730,23 @@ textarea {
 .m-panel2a {
 	width: 218px;
 	font-size: 14px;
+}
+
+.m-panel2b {
+	width: 100%;
+	padding: 0 5px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	position: relative;
+	height: 41px;
+	background-color: transparent;
+}
+
+.m-panel2c {
+	width: 100%;
+	font-size: 14px;
+	text-align: left;
 }
 
 .m-panel2 input {
